[tool.poetry]
name = "onlyfans-dl"
version = "0.1.0"
description = ""
authors = ["rdnkarchiver <rdnkarchiver@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "^2.32.2"}
msgspec = "^0.18.6"
platformdirs = "^4.2.2"

[tool.poetry.dev-dependencies]
mypy = "^1.10.0"
types-requests = "^2.32.0"

[tool.poetry.scripts]
onlyfans_dl = "onlyfans_dl.__main__:main"

[tool.mypy]
python_version = "3.12"
show_error_codes = true
show_absolute_path = true
files = ["onlyfans_dl"]
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
